fix(style.css): modify z-index and fix them in correct list form

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ a {
 }
 
 .hero {
-  z-index: -1;
   background: url(img/fondo.png) center;
 }
 
@@ -25,9 +24,6 @@ header {
   padding: 40px 0;
   display: flex;
   justify-content: center;
-}
-main{
-  overflow: hidden;
 }
 
 .topbar {
@@ -57,7 +53,7 @@ main{
   width: 32px;
   margin-left: 25px;
   left: -13px;
-  z-index: 5;
+  z-index: 4;
   opacity: 0;
   cursor: pointer;
 }
@@ -68,7 +64,6 @@ main{
   width: 32px;
   position: absolute;
   left: 15px;
-  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -134,7 +129,7 @@ main{
   border-radius: 5px;
   justify-content: center;
   padding: 20px 10px;
-  z-index: 10;
+  z-index: 2;
   width: 30%;
   height: 30px;
   max-width: 150px;
@@ -155,11 +150,7 @@ main{
   display: flex;
 }
 
-/* modificar 
 
-margin 0 5px 0 0
-display: flex
-padding: 5px*/
 
 .download:hover {
   background-color: #6865ee;
@@ -214,14 +205,12 @@ padding: 5px*/
   background-color: #fff;
   padding: 20px 0;
   margin: 10px 10px 10px -30px;
-  z-index: 1;
 }
 
 .marco {
   border: 10px solid #ffffff60;
   box-sizing: border-box;
   margin: 0 20px 0 40px;
-  z-index: 1;
   max-width: 350px;
 }
 
@@ -233,7 +222,6 @@ padding: 5px*/
   margin-bottom: 0;
   margin-top: 10px;
   font-size: 25px;
-  z-index: 10;
 }
 
 .hero-1 p {
@@ -355,13 +343,6 @@ padding: 5px*/
   background: url(img/fondo.png) bottom / cover no-repeat;
 }
 
-.mobile-responsive {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0 0 60px 0;
-  overflow: hidden;
-}
 
 .responsive {
   display: flex;
@@ -504,12 +485,16 @@ padding: 5px*/
     justify-content: center;
     padding: 5px;
     object-fit: contain;
+    z-index: 1;
+    width: 200px;
+    height: 200px;
 }
-.circle img {
-  z-index: -1;
+.card img {
   width: 200px;
   height: 200px;
   object-fit: contain;
+  position: absolute;
+  transform: translateY(7.5px);
 }
 .top-space {
   width: 12px;
@@ -1006,10 +991,6 @@ footer{
 
   /* FEATURES */
 
-  .mobile-responsive {
-    display: none;
-  }
-
   .responsive {
     display: flex;
     flex-direction: column;
@@ -1021,7 +1002,6 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
   }
 
   .hidden-p {
